Bug 117712 - [OLH] Closing installed help with <Alt>+<F4> crashes LO
Summary: [OLH] Closing installed help with <Alt>+<F4> crashes LO
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Documentation (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: x86-64 (AMD64) Linux (All)
: highest critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.0.1
Keywords: haveBacktrace
: 117870 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-05-20 10:39 UTC by Thomas Hackert
Modified: 2018-05-30 14:13 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
"soffice --backtrace" output (12.25 KB, text/x-log)
2018-05-20 10:40 UTC, Thomas Hackert
Details
bzip'd "soffice --strace" log (1.06 MB, application/x-bzip)
2018-05-20 10:41 UTC, Thomas Hackert
Details
bt with debug symbols (6.93 KB, text/plain)
2018-05-26 06:59 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Hackert 2018-05-20 10:39:20 UTC
Hello @ll,
I hope I have chosen the right component. If not, feel free to change it ... ;)

Steps to reproduce:

1. Install LO Master in parallel (I have used https://wiki.documentfoundation.org/Installing_in_parallel/Linux to do it) with de-DE lang- as well as helppack (may crash with other lang- and helppack as well, but have not tried it, sorry ... :( ).
2. start LO
3. press <Alt>+<M> to start Math
4. press <F1> to open the installed help
5. press <Alt>+<F4> to close it

LO crashes reproducible with the steps above ... :( And it also crashes, if you opens the help somewhere (say "Format - Fonts" or "Format - Font size") ... :(

OS: Debian Testing AMD64
LO: Version: 6.1.0.0.alpha1+
Build-ID: 3dea0e08e9b5331d6e34384977c98d0782c7746d
CPU-Threads: 4; BS: Linux 4.16; UI-Render: Standard; VCL: kde4; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-05-20_00:10:55
Gebietsschema: de-DE (de_DE.UTF-8); Calc: group
(installed in parallel, following the instructions from the link above)

Sorry for the inconvenience
Thomas.
Comment 1 Thomas Hackert 2018-05-20 10:40:27 UTC
Created attachment 142212 [details]
"soffice --backtrace" output

Backtrace produced with "soffice --backtrace"
Comment 2 Thomas Hackert 2018-05-20 10:41:52 UTC
Created attachment 142213 [details]
bzip'd "soffice --strace" log

"bzipped" strace log, produced with "soffice --strace"
Comment 3 Thomas Hackert 2018-05-20 11:38:09 UTC
Hello @ll,
I found out that this crash seems to be a general problem, not only Math related. I was translating Math's help when the first crash appeared, but has tried it from LO's StartCenter now, where it also crashed ... :( So a slightly different description to reproduce it:

1. install LO following the instructions from https://wiki.documentfoundation.org/Installing_in_parallel/Linux with de-DE lang- as well as helppack
2. start LO
3. press <F1>
4. press <Alt>+<F4>

LO crashes reproducible ... :(
Sorry for the inconvenience
Thomas.
Comment 4 Regina Henschel 2018-05-20 15:31:36 UTC
It does not crash for me with Version: 6.1.0.0.alpha1+ (x64)
Build-ID: 8337f98270a306ae098976c382b37d3747649e6e
CPU-Threads: 8; BS: Windows 10.0; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc: CL
Comment 5 Xavier Van Wijmeersch 2018-05-21 08:18:40 UTC
can reproduce crash

crashreport.libreoffice.org/stats/crash_details/afef6dca-3c99-4faa-9120-cdec8956eed5

Version: 6.1.0.0.alpha1+
Build ID: 1462bdc3abe60cee43cf6064663d646adbf13894
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-05-19_02:52:14
Locale: nl-BE (en_US.UTF-8); Calc: group

Version: 6.1.0.0.alpha1+
Build ID: db04be037b611e296ef9f2542322c52ed82d7a2b
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: group
Comment 6 Julien Nabet 2018-05-26 06:59:38 UTC
Created attachment 142285 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated yesterday, I could reproduce this.
I attached a bt with debug symbols.
Comment 7 Julien Nabet 2018-05-26 07:00:10 UTC
Let's increase the importance since it's a crash + not a corner case at all!
Comment 8 Xisco Faulí 2018-05-28 15:52:55 UTC
(In reply to Julien Nabet from comment #6)
> Created attachment 142285 [details]
> bt with debug symbols
> 
> On pc Debian x86-64 with master sources updated yesterday, I could reproduce
> this.
> I attached a bt with debug symbols.

Hi Julien,
Did you use --with-help=html  here ?
Comment 9 Julien Nabet 2018-05-28 18:47:49 UTC
(In reply to Xisco Faulí from comment #8)
>...
> Did you use --with-help=html  here ?
No I just use:
--with-help
Comment 10 Xisco Faulí 2018-05-29 08:48:46 UTC
*** Bug 117870 has been marked as a duplicate of this bug. ***
Comment 11 Caolán McNamara 2018-05-29 15:32:41 UTC
I imagine...

commit 9fa32e5dce345dea17129587c401c03520fb398b
Author: Noel Grandin <noel.grandin@collabora.co.uk>
Date:   Wed May 16 11:54:52 2018 +0200

    loplugin:unusedfields in sfx2

    and fix leak of HelpListener_Impl in SfxHelpWindow_Impl

is the start of the problem
Comment 12 Commit Notification 2018-05-29 19:47:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=509df47d2165fd08a7e0d270cade28ff52da532e

Resolves: tdf#117712 closing help crashes

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2018-05-29 19:47:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=379a83359f93fa34799e116c38532f43d0534265&h=libreoffice-6-1

Resolves: tdf#117712 closing help crashes

It will be available in 6.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Xavier Van Wijmeersch 2018-05-30 14:02:57 UTC
verified with and its working, no crash.

Version: 6.1.0.0.beta1+
Build ID: e42f6174d30c9f2211bdaffdefb011eeb9ead1fc
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: group threaded
Comment 15 Xisco Faulí 2018-05-30 14:13:10 UTC
(In reply to Xavier Van Wijmeersch from comment #14)
> verified with and its working, no crash.
> 
> Version: 6.1.0.0.beta1+
> Build ID: e42f6174d30c9f2211bdaffdefb011eeb9ead1fc
> CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
> Locale: nl-BE (en_US.UTF-8); Calc: group threaded

Thanks for verifying it!! Setting to Verified.