Resolves: tdf#117712 closing help crashes

since...

commit 9fa32e5dce345dea17129587c401c03520fb398b
Date:   Wed May 16 11:54:52 2018 +0200

    fix leak of HelpListener_Impl in SfxHelpWindow_Impl

Change-Id: I7e2cbb5d0c69e96fc7f2e1cc0c5563203c1f3dce